; ModuleID = '/home/carl/AnghaBench/tig/src/extr_options.c_set_option.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_options.c_set_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"color\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"set\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"bind\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"source\00", align 1
@.str.4 = private unnamed_addr constant [27 x i8] c"Unknown option command: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_option(i8* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @strcmp(i8* %8, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load i32, i32* %6, align 4
  %13 = load i8**, i8*** %7, align 8
  %14 = call i32 @option_color_command(i32 %12, i8** %13)
  store i32 %14, i32* %4, align 4
  br label %42

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @strcmp(i8* %16, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %23, label %19

19:                                               ; preds = %15
  %20 = load i32, i32* %6, align 4
  %21 = load i8**, i8*** %7, align 8
  %22 = call i32 @option_set_command(i32 %20, i8** %21)
  store i32 %22, i32* %4, align 4
  br label %42

23:                                               ; preds = %15
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @strcmp(i8* %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %31, label %27

27:                                               ; preds = %23
  %28 = load i32, i32* %6, align 4
  %29 = load i8**, i8*** %7, align 8
  %30 = call i32 @option_bind_command(i32 %28, i8** %29)
  store i32 %30, i32* %4, align 4
  br label %42

31:                                               ; preds = %23
  %32 = load i8*, i8** %5, align 8
  %33 = call i32 @strcmp(i8* %32, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %39, label %35

35:                                               ; preds = %31
  %36 = load i32, i32* %6, align 4
  %37 = load i8**, i8*** %7, align 8
  %38 = call i32 @option_source_command(i32 %36, i8** %37)
  store i32 %38, i32* %4, align 4
  br label %42

39:                                               ; preds = %31
  %40 = load i8*, i8** %5, align 8
  %41 = call i32 @error(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.4, i64 0, i64 0), i8* %40)
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %39, %35, %27, %19, %11
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @option_color_command(i32, i8**) #1

declare dso_local i32 @option_set_command(i32, i8**) #1

declare dso_local i32 @option_bind_command(i32, i8**) #1

declare dso_local i32 @option_source_command(i32, i8**) #1

declare dso_local i32 @error(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
